0.1.6

2021-11-25  Brecht Sanders  https://github.com/brechtsanders/

  * fix case insensitive match in portcolcon_write_highlight()

0.1.5

2021-11-24  Brecht Sanders  https://github.com/brechtsanders/

  * moved version functions and definitions to the end of portcolcon.h
  * changed portcolcon_printf() from macro to function
  * added portcolcon_printf_in_color()
  * changed portcolcon_write_data_in_color() from function to macro
  * on Windows use printf() in portcolcon_write() instead of WriteConsoleA()

0.1.4

2021-11-24  Brecht Sanders  https://github.com/brechtsanders/

  * added portcolcon_write_data_in_color() and portcolcon_write_in_color()
  * added code to keep track of current color
  * added PORTCOLCON_COLOR_IGNORE

0.1.3

2021-11-03  Brecht Sanders  https://github.com/brechtsanders/

  * fix line break issue when not using Windows console
  * added GitHub Actions CI (for: Windows/MinGW, Ubuntu/GCC, macOS/Clang)
  * don't include malloc.h (fails on macOS)

0.1.2

2021-11-03  Brecht Sanders  https://github.com/brechtsanders/

  * fix detection of environment variables when using Windows console

0.1.1

2020-11-21  Brecht Sanders  https://github.com/brechtsanders/

  * minor fixes

2020-09-27  Brecht Sanders  https://github.com/brechtsanders/

  * don't restore original color in portcolcon_cleanup()

0.1.0

2020-09-26  Brecht Sanders  https://github.com/brechtsanders/

  * initial release