@@ -1,5 +1,5 @@
 # depslib dependency file v1.0
-1637826975 source:z:\portcolcon\lib\portcolcon.c
+1637839272 source:z:\portcolcon\lib\portcolcon.c
 	"portcolcon.h"
 	<stdio.h>
 	<stdlib.h>
@@ -9,7 +9,7 @@
 	<limits.h>
 	<unistd.h>
 
-1637782100 z:\portcolcon\include\portcolcon.h
+1637837551 z:\portcolcon\include\portcolcon.h
 	<stdio.h>
 	<stdarg.h>
 
